- added hover effect - done some minor refactoring - added highlight on select

--- a/BookManagement/app/assets/styles/Site.css
+++ b/BookManagement/app/assets/styles/Site.css
@@ -27,3 +27,13 @@ textarea {
     color: white;
     background-color: black;
 }
+
+.table-body-hover > tbody > tr:hover{
+    background-color : lightgray;
+}
+
+
+.selected{
+    background-color: darkgray;
+}
+
