--- a/BookManagement/app/views/home.html
+++ b/BookManagement/app/views/home.html
@@ -3,7 +3,7 @@
         <div class="panel-heading">
             <div class="row">
                 <div class="container">
-                    <h3>{{ controller.headerMessage }}</h3>
+                    <h3>Welcome</h3>
                 </div>
             </div>
         </div>
