-created additional controllers for add and edit - revised add and edit to work with modal popups - notification services transformed to Toaster factory - created ModelWindowFactory to encapsulate creation of model popup windows. - additional refactoring done.

--- a/BookManagement/app/views/books/edit.html
+++ b/BookManagement/app/views/books/edit.html
@@ -9,29 +9,31 @@
         </div>
         <div class="panel-body">
             <div>
-                <div class="form-group" style="width:50%">
+                <div class="form-group" style="width:90%">
                     <input type="hidden" ng-model="controller.bookModel.id" />
                     <table class="table table-bordered table-responsive">
                         <tr>
-                            <td>
+                            <td style="width:40%">
                                 <label for="txtBookName">Name:</label>
                             </td>
-                            <td>
+                            <td style="width:60%">
                                 <input type="text" ng-model="controller.bookModel.name" />
                             </td>
                         </tr>
                         <tr>
-                            <td>
+                            <td style="width:30%">
                                 <label for="txtBookAuthor">Author:</label>
                             </td>
-                            <td>
+                            <td style="width:70%">
                                 <input type="text" ng-model="controller.bookModel.author" />
                             </td>
                         </tr>
                     </table>
                 </div>
-                <a class="btn btn-toolbar btn-success" ng-click="controller.updateBookList();">Save</a>
-                <a class="btn btn-toolbar btn-default" ng-click="controller.cancel();">Cancel</a>
+                <div style="text-align: right">
+                    <button class="btn btn-toolbar btn-success" ng-click="controller.saveBook();">Save</button>
+                    <button class="btn btn-toolbar btn-default" ng-click="controller.close();">Cancel</button>
+                </div>                
             </div>
         </div>
     </div>
