--- a/BookManagement/app/views/books/edit.html
+++ b/BookManagement/app/views/books/edit.html
@@ -1,6 +1,6 @@
 ﻿<div>
     <div class="panel">
-        <div class="panel-heading">
+        <div class="panel-heading table-header">
             <div class="row">
                 <div class="container">
                     <h3>Edit Book</h3>
@@ -11,7 +11,7 @@
             <div>
                 <div class="form-group" style="width:90%">
                     <input type="hidden" ng-model="controller.bookModel.id" />
-                    <table class="table table-bordered table-responsive">
+                    <table class="table table-bordered table-responsive form-table">
                         <tr>
                             <td style="width:40%">
                                 <label for="txtBookName">Name:</label>
