--- a/BookManagement/app/views/books/list.html
+++ b/BookManagement/app/views/books/list.html
@@ -34,7 +34,7 @@
                         <td>{{book.id}}</td>
                         <td>{{book.name}}</td>
                         <td>{{book.author}}</td>
-                        <td>
+                        <td class="form-table-action">
                             <span class="text-center">
                                 <a ng-click="controller.showEditBookWindow(book);" id="lnkEdit" name="lnkEdit">Edit</a>
                             </span>
