--- a/BookManagement/app/views/books/add.html
+++ b/BookManagement/app/views/books/add.html
@@ -1,6 +1,6 @@
 ﻿<div>
     <div class="panel">
-        <div class="panel-heading">
+        <div class="panel-heading table-header">
             <div class="row">
                 <div class="container">
                     <h3>Add Book</h3>                    
@@ -10,7 +10,7 @@
         <div class="panel-body">
             <div>
                 <div class="form-group" style="width:90%">
-                    <table class="table table-bordered table-responsive">
+                    <table class="table table-bordered table-responsive form-table">
                         <tr>
                             <td style="width:40%">
                                 <label for="txtBookName">Name:</label>
