- refactored web api and angularjs app. - integrate webapi with angularjs app. - fixed some minor issues with regards to data binding.

--- a/BookManagement/app/assets/styles/Site.css
+++ b/BookManagement/app/assets/styles/Site.css
@@ -38,6 +38,7 @@ textarea {
 
 .table-body-hover > tbody > tr:hover{
     background-color : lightgray;
+    cursor: pointer;
 }
 .form-table > tbody > tr > td > input,select{
     width : 100%;
