--- a/BookManagement/app/views/books/edit.html
+++ b/BookManagement/app/views/books/edit.html
@@ -17,7 +17,7 @@
                                 <label for="txtBookName">Name:</label>
                             </td>
                             <td style="width:60%">
-                                <input type="text" ng-model="controller.bookModel.name" />
+                                <input type="text" ng-model="controller.bookModel.title" />
                             </td>
                         </tr>
                         <tr>
